syntax = "proto2";

message ProfilingEvent {
  // Reserved for later use as ID field.
  reserved 1;

  // A unique client name. A good starting point would be the hostname.
  optional string client = 2;

  // The name of the timing.
  optional string name = 3;

  // The duration in seconds.
  optional float duration_seconds = 4;

  // Seconds since the epoch of the timing.
  optional int64 date_epoch_seconds = 5;
}

message Testcase {
  // Reserved for later use as ID field.
  reserved 1;

  optional string language = 2;
  optional Generator generator = 3;
  optional Harness harness = 4;

  // <input_name, input_value>
  map<string, string> inputs = 5;
  repeated string opts = 6;
  repeated ProfilingEvent timings = 7;
}

message Generator {
  // Reserved for later use as ID field.
  reserved 1;

  optional string name = 2;
  optional string version = 3;
}

message Harness {
  // Reserved for later use as ID field.
  reserved 1;

  optional string name = 2;
  optional string version = 3;
}

message Testbed {
  // Reserved for later use as ID field.
  reserved 1;

  optional string language = 2;
  optional string name = 3;
  optional string version = 4;
  repeated string opts = 5;
}

message Result {
  // Reserved for later use as ID field.
  reserved 1;

  optional Testcase testcase = 2;
  optional Testbed testbed = 3;
  optional int32 returncode = 4;
  // <name, value>
  map<string, string> outputs = 5;
  repeated ProfilingEvent timings = 6;
}

//
// RPCs
//

// SubmitTestcases

message SubmitTestcasesRequest {
  // Reserved for later use as ID field.
  reserved 1;

  optional string client = 2;
  repeated Testcase testcases = 3;
}

message SubmitTestcasesResponse {
  enum Status {
    SUCCESS = 0;
    FAILURE = 1;
  }

  optional Status status = 1 [default = SUCCESS];
  optional string server_name = 2;
  optional int32 error_code = 3;
}

// RequestTestcases.

message RequestTestcasesRequest {
  // Reserved for later use as ID field.
  reserved 1;

  // The client name, e.g. $HOSTNAME.
  optional string client = 2;
  optional Testbed testbed = 3;
  optional Harness harness = 4;
}

message RequestTestcasesResponse {
  enum Status {
    SUCCESS = 0;
    FAILURE = 1;
  }

  optional Status status = 1 [default = SUCCESS];
  optional string server_name = 2;
  optional int32 error_code = 3;
  repeated Testcase testcases = 4;
}

// SubmitTestcases

message SubmitResultsRequest {
  // Reserved for later use as ID field.
  reserved 1;

  // TODO(cec): Normalize results using repeated fields and indices.
  repeated Result results = 2;
}

message SubmitResultsResponse {
  enum Status {
    SUCCESS = 0;
    FAILURE = 1;
  }

  optional Status status = 1 [default = SUCCESS];
}

service TestingService {
  rpc SubmitTestcases (SubmitTestcasesRequest) returns (SubmitTestcasesResponse);
  rpc RequestTestCases (RequestTestcasesRequest) returns (RequestTestcasesResponse);
  rpc SubmitResults (SubmitResultsRequest) returns (SubmitResultsResponse);
}


message ResultsCollection {
  // Reserved for later use as ID field.
  reserved 1;

  repeated Result results = 2;
}

message ResultsTable {
  message ResultsTableEntry {
    optional Testbed testbed = 1;
    optional Harness harness = 2;
    repeated Result results = 3;
  }

  // Reserved for later use as ID field.
  reserved 1;

  repeated ResultsTableEntry entries = 2;
}
